--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         /* Featured Image */
         .featured-image {
             width: 100%;
-            max-height: 400px;
-            object-fit: cover;
+            max-height: 800px;
+            object-fit: contain;
             border-radius: var(--border-radius);
             margin-bottom: 2rem;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
